--- a/.gitignore
+++ b/.gitignore
@@ -23,7 +23,9 @@ share/python-wheels/
 *.egg-info/
 .installed.cfg
 *.egg
-
+.sass-cache/
+node_modules/
+dist/
 
 # PyInstaller
 #  Usually these files are written by a python script from a template
